move style to head section

--- a/tabou.html
+++ b/tabou.html
@@ -4,10 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>tablee</title>
+    <style>
+        h1 {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
 
-    <h1 style="color:blue;>welcome to my website!</h1>
+    <h1>welcome to my website!</h1>
 
 	<h2>hello world</h2>
 	<table>
